--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start b $PORT"
+    "start": "next start -b $PORT"
   },
   "dependencies": {
     "next": "10.1.3",
